2004-01-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-util.el (w3m-keep-region-active): Renamed from
	`w3m-activate-zmacs-regions'.
	(w3m-deactivate-region): Declared as a macro.

	* w3m-search.el (w3m-search-read-query): Call
	`w3m-deactivate-region' instead of `w3m-deactivate-mark'.

	* w3m.el (w3m-next-anchor, w3m-previous-anchor, w3m-next-form,
	w3m-previous-form, w3m-next-image, w3m-previous-image,
	w3m-scroll-up-or-next-url, w3m-scroll-down-or-previous-url,
	w3m-beginning-of-line, w3m-end-of-line): Call
	`w3m-keep-region-active' instead of `w3m-activate-zmacs-regions'.

2004-01-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-proc.el (w3m-process-wait-discard-input): New variable.
	(w3m-process-wait-process): If `w3m-process-wait-discard-input'
	is non-nil, call `discard-input'.

	* shimbun/mew-shimbun.el (mew-shimbun-headers)
	(mew-shimbun-article): New macro.
	(mew-shimbun-retrieve-article)
	(mew-shimbun-re-retrieve-article): Use macros.

2004-01-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-deactivate-mark): New function alias.

	* w3m.el (w3m-active-region-or-url-at-point): Use it.
	(w3m-open-all-links-in-new-session): Use it.

	* w3m-search.el (w3m-search-read-query): Use it.

	* shimbun/shimbun.el (shimbun-point-at-bol): New function
	replacing `gnus-point-at-bol' which has been abolished in the Gnus
	upstream.
	(shimbun-point-at-eol): New function replacing `gnus-point-at-eol'
	which has been abolished in the Gnus upstream.

	* shimbun/nnshimbun.el (nnshimbun-search-id): Use
	`shimbun-point-at-bol'.
	(nnshimbun-parse-nov): Use `shimbun-point-at-eol'.
	(nnshimbun-request-expire-articles): Ditto.

2004-01-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-rakuten.el (shimbun-rakuten-group-alist): Declared as
	an option with `defcustom' instead of `defvar'.

2004-01-04  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-rakuten.el: New file.

2004-01-04  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
